services/search/deploy/canary/search-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service-canary
  labels:
    app: search-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
      version: canary
  template:
    metadata:
      labels:
        app: search-service
        version: canary
    spec:
      containers:
        - name: search-service
          image: search-service:latest
          ports:
            - containerPort: 8081
