services/search/deploy/canary/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    app: search-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search-service
      version: canary
  template:
    metadata:
      labels:
        app: search-service
        version: canary
    spec:
      containers:
        - name: search-service
          image: search-service:latest
          ports:
            - containerPort: 50090
            - containerPort: 9030
