services/search/deploy/canary/search-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
    version: canary
  ports:
    - name: grpc
      protocol: TCP
      port: 50050
      targetPort: 50050
    - name: http
      protocol: TCP
      port: 8050
      targetPort: 8050
