services/search/deploy/canary/search-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: search-service
spec:
  hosts:
    - search-service
  http:
    - route:
        - destination:
            host: search-service
            subset: stable
          weight: 90
        - destination:
            host: search-service
            subset: canary
          weight: 10
      port:
        number: 9030
